added service record update component at vehicledetails page

--- a/OtoTamir.WEBUI/Views/ServiceRecord/Ongoing.cshtml
+++ b/OtoTamir.WEBUI/Views/ServiceRecord/Ongoing.cshtml
@@ -236,7 +236,8 @@
                                 <div class="modal fade" id="editModal-@record.Id" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
-                                            @await Component.InvokeAsync("_EditServiceRecordViewComponentPartial", record.Id)
+
+                                            @await Component.InvokeAsync("_EditServiceRecordViewComponentPartial", new  { ReturnUrl = "/ServiceRecord/Ongoing", recordId = record.Id })
                                         </div>
                                     </div>
                                 </div>
