working on treasury page and financial management

--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateServiceRecordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateServiceRecordViewComponentPartial/Default.cshtml
@@ -68,7 +68,7 @@
                                 {
                                     foreach (var bank in ViewBag.Banks)
                                     {
-                                        <option value="@bank.Id">@bank.Name</option>
+                                        <option value="@bank.Id">@bank.BankName</option>
                                     }
                                 }
                             </select>
