--- a/OtoTamir.WEBUI/Views/Shared/Components/_AddBankCardViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_AddBankCardViewComponentPartial/Default.cshtml
@@ -58,7 +58,7 @@
                         <input asp-for="Debt" type="number" class="form-control shadow-sm" step=".01" placeholder="0.00" />
                     </div>
 
-                    <div class="col-md-6">
+                    @* <div class="col-md-6">
                         <label asp-for="BillingDate" class="form-label fw-semibold">Hesap Kesim Günü</label>
                         <div class="input-group shadow-sm">
                             <span class="input-group-text bg-light"><i class="bi bi-calendar-event"></i></span>
@@ -71,7 +71,7 @@
                             </select>
                         </div>
                         <small class="text-muted">Ayın kaçında hesap kesiliyor?</small>
-                    </div>
+                    </div> *@
 
                     <div class="col-md-6">
                         <label asp-for="DueDate" class="form-label fw-semibold">Son Ödeme Günü</label>
