--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -134,7 +134,14 @@
                                     Fiyat Hesaplama                                    
                                 </p>
                             </a>  
-                        </li><li class="nav-item">
+                        </li>
+                        <a href="/treasury/index" class="nav-link">
+                            <i class="nav-icon bi bi-pencil-square"></i>
+                            <p>
+                                Kasa
+                            </p>
+                        </a>
+                        <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon bi bi-pencil-square"></i>
                                 <p>
