--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using OtoTamir.CORE.DTOs.MechanicDTOs
 @using OtoTamir.CORE.DTOs.SymptomDTOs
 @using OtoTamir.CORE.DTOs.ServiceRecordDTOs
+@using OtoTamir.CORE.DTOs.TreasuryDTOs
 @using Microsoft.AspNetCore.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
